modify the home page routing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <ul class="nav-links">
           <li><a href="#courses">Courses</a></li>
-          <li><a href="#about">About Us</a></li>
+          <li><a href="#features">Features</a></li>
           <li><a href="#developers">Developers</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -88,7 +88,7 @@
   </section>
 
   <!-- Features Section -->
-  <section class="features">
+  <section class="features" id="features">
     <div class="container">
       <div class="section-header">
         <h2>Why Choose Edusphere?</h2>
@@ -334,7 +334,7 @@
   </section>
 
   <!-- Instructors Section -->
-  <section class="instructors" id="instructors">
+  <section class="instructors" id="developers">
     <div class="container">
       <div class="section-header">
         <h2>Meet Our Developers</h2>
