modify the index page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edusphere - Transform Your Future Through Education</title>
+  <link rel="icon" href="J.jpg">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -47,7 +48,7 @@
         <p>Unlock your potential with Edusphere's expert-led courses, cutting-edge learning tools, and a supportive global community.</p>
         <div class="hero-cta">
           <a href="#courses" class="btn btn-primary btn-large">Explore Courses</a>
-          <a href="#" class="btn btn-outline btn-large">Watch Demo <i class="fas fa-play-circle"></i></a>
+          <!-- <a href="#" class="btn btn-outline btn-large">Watch Demo <i class="fas fa-play-circle"></i></a> -->
         </div>
         <div class="hero-stats">
           <div class="stat">
@@ -183,7 +184,7 @@
             </div>
             <div class="course-footer">
               <div class="course-instructor">
-                <img src="https://via.placeholder.com/40x40" alt="Instructor">
+                <img src="https://static.vecteezy.com/system/resources/previews/008/302/462/original/eps10-grey-user-icon-or-logo-in-simple-flat-trendy-modern-style-isolated-on-white-background-free-vector.jpg" alt="Instructor">
                 <span>Alex Thompson</span>
               </div>
               <div class="course-price">$94.99</div>
@@ -216,7 +217,7 @@
             </div>
             <div class="course-footer">
               <div class="course-instructor">
-                <img src="https://via.placeholder.com/40x40" alt="Instructor">
+                <img src="https://static.vecteezy.com/system/resources/previews/008/302/462/original/eps10-grey-user-icon-or-logo-in-simple-flat-trendy-modern-style-isolated-on-white-background-free-vector.jpg" alt="Instructor">
                 <span>Dr. Sarah Johnson</span>
               </div>
               <div class="course-price">$89.99</div>
@@ -250,7 +251,7 @@
             </div>
             <div class="course-footer">
               <div class="course-instructor">
-                <img src="https://via.placeholder.com/40x40" alt="Instructor">
+                <img src="https://static.vecteezy.com/system/resources/previews/008/302/462/original/eps10-grey-user-icon-or-logo-in-simple-flat-trendy-modern-style-isolated-on-white-background-free-vector.jpg" alt="Instructor">
                 <span>Prof. Michael Chen</span>
               </div>
               <div class="course-price">$129.99</div>
@@ -282,7 +283,7 @@
             </div>
             <div class="course-footer">
               <div class="course-instructor">
-                <img src="https://via.placeholder.com/40x40" alt="Instructor">
+                <img src="https://static.vecteezy.com/system/resources/previews/008/302/462/original/eps10-grey-user-icon-or-logo-in-simple-flat-trendy-modern-style-isolated-on-white-background-free-vector.jpg" alt="Instructor">
                 <span>Emma Rodriguez</span>
               </div>
               <div class="course-price">$69.99</div>
@@ -420,7 +421,7 @@
               <p>Edusphere's web development course completely changed my career path. Within 3 months of completing the course, I landed a job as a junior developer at a tech startup. The hands-on projects and mentor support made all the difference.</p>
             </div>
             <div class="testimonial-author">
-              <img src="https://via.placeholder.com/80x80" alt="James Wilson">
+              <img src="https://static.vecteezy.com/system/resources/previews/008/302/462/original/eps10-grey-user-icon-or-logo-in-simple-flat-trendy-modern-style-isolated-on-white-background-free-vector.jpg" alt="James Wilson">
               <div class="author-info">
                 <h4>James Wilson</h4>
                 <p>Web Developer at TechStart Inc.</p>
@@ -442,7 +443,7 @@
               <p>As a busy professional, I needed a flexible learning solution that wouldn't compromise on quality. Edusphere delivered exactly that. The data science course was comprehensive, challenging, and directly applicable to my work.</p>
             </div>
             <div class="testimonial-author">
-              <img src="https://via.placeholder.com/80x80" alt="Priya Sharma">
+              <img src="https://static.vecteezy.com/system/resources/previews/008/302/462/original/eps10-grey-user-icon-or-logo-in-simple-flat-trendy-modern-style-isolated-on-white-background-free-vector.jpg" alt="Priya Sharma">
               <div class="author-info">
                 <h4>Priya Sharma</h4>
                 <p>Data Analyst at Global Finance</p>
@@ -464,7 +465,7 @@
               <p>The UX/UI design course exceeded my expectations. The instructor's feedback on my projects was invaluable, and the community of fellow students provided great support and networking opportunities. Worth every penny!</p>
             </div>
             <div class="testimonial-author">
-              <img src="https://via.placeholder.com/80x80" alt="David Kim">
+              <img src="https://static.vecteezy.com/system/resources/previews/008/302/462/original/eps10-grey-user-icon-or-logo-in-simple-flat-trendy-modern-style-isolated-on-white-background-free-vector.jpg" alt="David Kim">
               <div class="author-info">
                 <h4>David Kim</h4>
                 <p>UI Designer at Creative Solutions</p>
@@ -595,7 +596,7 @@
     </div>
   </footer>
 
-  <script src="scripts.js"></script>
+  
   <script>
     // Register form submission
     document.addEventListener("DOMContentLoaded", function () {
@@ -671,5 +672,6 @@
         }
     });
   </script>
+  <script src="scripts.js"></script>
 </body>
 </html>
